--- a/versions.properties
+++ b/versions.properties
@@ -1,2 +1,5 @@
 com.intellij%forms_rt%=7.0.3
-
+com.formdev%flatlaf%=3.5.1
+com.formdev%flatlaf-intellij-themes%=3.5.1
+com.github.Dansoftowner%jSystemThemeDetector%=3.9.1
+org.slf4j%slf4j-nop%=2.0.16
