--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           wget https://github.com/sireum/rolling/releases/download/m2/osthemedetector.tar.gz
           tar xf osthemedetector.tar.gz
-          mkdir $HOME/.m2/repository/
+          mkdir -p $HOME/.m2/repository/
           mv com $HOME/.m2/repository/
           export SIREUM_HOME="$GITHUB_WORKSPACE/Sireum"
           git clone --depth=1 https://github.com/sireum/kekinian Sireum
