--- a/.jitpack.yml
+++ b/.jitpack.yml
@@ -1,6 +1,5 @@
-jdk:
-  - oraclejdk17
 before_install:
+  - sdk install java 25.0.1.fx-librca
   - curl -JLOs https://raw.githubusercontent.com/sireum/kekinian/master/versions.properties
   - mkdir bin
   - curl -JLso bin/init.sh https://raw.githubusercontent.com/sireum/kekinian/master/bin/init.sh
@@ -10,5 +9,5 @@ before_install:
   - SIREUM_NO_SETUP=true bin/init.sh
 install:
   - unset JAVA_TOOL_OPTIONS
-  - bin/sireum proyek publish --target jvm . org.sireum.forms
+  - SIREUM_PROVIDED_JAVA=true bin/sireum proyek publish --target jvm . org.sireum.forms
   - rm -fR lib/cache
